--- a/index.html
+++ b/index.html
@@ -43,16 +43,22 @@
       padding:14px 16px;
     }
 
-    /* أيقونة القائمة */
+    /* زر القائمة */
     .hamburger{
       background:none;
       border:none;
       cursor:pointer;
       color:white;
     }
-    .hamburger svg{ width:24px; height:24px; stroke:white; stroke-width:2.5; fill:none; }
+    .hamburger svg{
+      width:24px;
+      height:24px;
+      stroke:white;
+      stroke-width:2.5;
+      fill:none;
+    }
 
-    /* شعار الموقع */
+    /* الشعار */
     .logo img{
       height:36px;
       display:block;
@@ -81,7 +87,7 @@
       background:var(--black-header);
     }
 
-    /* جعل الموقع يبدو جيداً في الشاشات الصغيرة */
+    /* تكيف مع الشاشات الصغيرة */
     @media (max-width:480px){
       .logo img{ height:30px; }
       nav{ gap:16px; font-size:14px; }
@@ -101,7 +107,7 @@
 
       <!-- ✅ شعار الموقع الجديد -->
       <a href="#" class="logo">
-        <img src="https://i.postimg.cc/QCtqdcz7/IMG-0843.jpg" alt="Logo">
+        <img src="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg" alt="Logo">
       </a>
 
       <!-- زر الدخول -->
