--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </a>
 
       <!-- زر الدخول -->
-      <button class="cta">Connectez-vous</button>
+      <button class="cta">Contact Us</button>
     </div>
 
     <!-- القوائم -->
@@ -132,7 +132,7 @@
       <span>Logos</span>
       <span>Cartes de visite</span>
       <span>Sites Web</span>
-      <span>AI</span>
+      <span>Digital Marketing</span>
     </nav>
   </header>
 
