--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Design Header Fixed</title>
+  <title>Design Header Fixed + Hero Section</title>
 
-  <!-- ✅ إعدادات اللون في المتصفحات -->
-  <meta name="theme-color" content="#3f5bff"> <!-- لأندرويد -->
-  <meta name="apple-mobile-web-app-capable" content="yes"> <!-- لتفعيل PWA في iPhone -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- نمط شريط الحالة -->
-  <meta name="msapplication-navbutton-color" content="#3f5bff"> <!-- لمايكروسوفت -->
+  <!-- إعدادات اللون في المتصفحات -->
+  <meta name="theme-color" content="#3f5bff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="msapplication-navbutton-color" content="#3f5bff">
 
-  <!-- أيقونة الموقع (يمكنك تعديلها لاحقًا) -->
+  <!-- أيقونة الموقع -->
   <link rel="icon" href="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg">
 
   <!-- الخط -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
@@ -28,6 +28,7 @@
       margin:0;
       font-family:"Inter",sans-serif;
       background:#fafafa;
+      scroll-behavior:smooth;
     }
 
     /* ✅ الهيدر الثابت */
@@ -50,7 +51,6 @@
       padding:14px 16px;
     }
 
-    /* أيقونة القائمة */
     .hamburger{
       background:none;
       border:none;
@@ -65,14 +65,12 @@
       fill:none;
     }
 
-    /* الشعار */
     .logo img{
       height:36px;
       display:block;
       object-fit:contain;
     }
 
-    /* زر الدخول */
     .cta{
       background:rgba(255,255,255,0.1);
       color:white;
@@ -81,9 +79,13 @@
       padding:10px 16px;
       font-weight:600;
       cursor:pointer;
+      transition:background 0.3s ease;
     }
 
-    /* القوائم */
+    .cta:hover{
+      background:rgba(255,255,255,0.2);
+    }
+
     nav{
       display:flex;
       gap:24px;
@@ -94,10 +96,9 @@
       background:var(--black-header);
     }
 
-    /* محتوى فارغ فقط للحشو (اختياري) */
+    /* ✅ تعويض مساحة الهيدر */
     main{
-      height:150vh; /* لتجربة الثبات أثناء التمرير */
-      background:#fafafa;
+      margin-top:120px; /* لتفادي تغطية القسم الأول بالهيدر */
     }
 
     /* الهاتف */
@@ -105,38 +106,198 @@
       .logo img{ height:30px; }
       nav{ gap:16px; font-size:14px; }
     }
+
+    /* ===== قسم Créateur de site Web ===== */
+    .hero-normal {
+      width: 100%;
+      min-height: 100vh;
+      background: linear-gradient(180deg, #0c0c0c 0%, #121212 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: #fff;
+      font-family: 'Inter', sans-serif;
+      padding: 80px 20px;
+      box-sizing: border-box;
+      overflow: hidden;
+    }
+
+    .hero-normal .content {
+      max-width: 420px;
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    .hero-normal h1 {
+      font-size: 2.8rem;
+      font-weight: 800;
+      margin-bottom: 0.8rem;
+      line-height: 1.3;
+    }
+
+    .hero-normal p {
+      font-size: 1.1rem;
+      color: #c8c8c8;
+      margin-bottom: 2.5rem;
+      line-height: 1.6;
+    }
+
+    .hero-normal input {
+      width: 100%;
+      max-width: 360px;
+      padding: 15px;
+      border-radius: 14px;
+      border: none;
+      outline: none;
+      font-size: 1rem;
+      background-color: #fff;
+      color: #000;
+      text-align: center;
+      margin-bottom: 1.4rem;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.25);
+    }
+
+    .hero-normal input::placeholder {
+      color: #aaa;
+    }
+
+    .hero-normal button {
+      width: 100%;
+      max-width: 360px;
+      padding: 15px;
+      background-color: #3b5bff;
+      border: none;
+      color: white;
+      border-radius: 14px;
+      font-size: 1.1rem;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 6px 14px rgba(59, 91, 255, 0.3);
+      transition: 0.25s ease;
+    }
+
+    .hero-normal button:hover {
+      background-color: #2f48cc;
+      transform: translateY(-3px);
+    }
+
+    .hero-normal .upload {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      margin-top: 1.6rem;
+      color: #fff;
+      font-weight: 600;
+      font-size: 1rem;
+      opacity: 0.9;
+      cursor: pointer;
+      transition: opacity 0.2s ease;
+    }
+
+    .hero-normal .upload:hover {
+      opacity: 1;
+    }
+
+    .hero-normal .upload svg {
+      width: 20px;
+      height: 20px;
+      fill: none;
+      stroke: #fff;
+      stroke-width: 2;
+    }
+
+    .hero-normal .arrow {
+      margin-top: 2.5rem;
+      animation: bounce 2s infinite;
+      opacity: 0.9;
+    }
+
+    .hero-normal .arrow svg {
+      width: 34px;
+      height: 34px;
+      fill: none;
+      stroke: white;
+      stroke-width: 2.5;
+    }
+
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+      40% {transform: translateY(10px);}
+      60% {transform: translateY(5px);}
+    }
+
+    @media (max-width: 480px) {
+      .hero-normal h1 {
+        font-size: 2.3rem;
+      }
+      .hero-normal p {
+        font-size: 1rem;
+        margin-bottom: 2rem;
+      }
+      .hero-normal input,
+      .hero-normal button {
+        max-width: 90%;
+      }
+    }
+    /* ===== نهاية قسم Créateur de site Web ===== */
   </style>
 </head>
 <body>
 
+  <!-- ✅ الهيدر الثابت -->
   <header>
     <div class="header-inner">
-      <!-- زر القائمة -->
       <button class="hamburger" aria-label="menu">
         <svg viewBox="0 0 24 24">
           <path d="M4 7h16M4 12h16M4 17h16" stroke-linecap="round" />
         </svg>
       </button>
 
-      <!-- ✅ شعار الموقع -->
       <a href="#" class="logo">
         <img src="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg" alt="Logo">
       </a>
 
-      <!-- زر الدخول -->
-      <button class="cta">Contact Us</button>
+      <button class="cta">Connectez-vous</button>
     </div>
 
-    <!-- القوائم -->
     <nav>
       <span>Logos</span>
       <span>Cartes de visite</span>
       <span>Sites Web</span>
-      <span>Digital Marketing</span>
+      <span>AI</span>
     </nav>
   </header>
 
-  <main></main>
+  <!-- ✅ محتوى الصفحة -->
+  <main>
+    <!-- ===== قسم Créateur de site Web ===== -->
+    <section class="hero-normal">
+      <div class="content">
+        <h1>Créateur de<br>site Web</h1>
+        <p>Créez un magnifique site Web en quelques secondes</p>
+
+        <input type="text" placeholder="Saisir le nom de votre entreprise">
+
+        <button>Commencer Maintenant</button>
+
+        <div class="upload">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12 16V8m0 0l-4 4m4-4l4 4M4 20h16" />
+          </svg>
+          Téléchargez Votre Logo
+        </div>
+
+        <div class="arrow">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M6 9l6 6 6-6" />
+          </svg>
+        </div>
+      </div>
+    </section>
+    <!-- ===== نهاية القسم ===== -->
+  </main>
 
 </body>
 </html>
