--- a/index.html
+++ b/index.html
@@ -5,84 +5,99 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Design Header Fixed + Sections</title>
 
+  <!-- ✅ أيقونة الموقع -->
   <link rel="icon" href="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg">
+
+  <!-- ✅ لون المتصفح (الهاتف) -->
+  <meta name="theme-color" content="#0c0c0c" />
+
+  <!-- ✅ الخطوط -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Cairo:wght@400;600;700;800&family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
-    :root{
-      --black-header:#111;
-      --white:#fff;
-      --gray-border:rgba(255,255,255,0.08);
+    :root {
+      --black-header: #111;
+      --white: #fff;
+      --gray-border: rgba(255,255,255,0.08);
     }
 
-    body{
-      margin:0;
-      font-family:"Inter",sans-serif;
-      background:#fafafa;
-    }
-
-    /* ✅ الهيدر الثابت */
-    header{
-      position:fixed;
-      top:0;
-      left:0;
-      right:0;
-      z-index:100;
-      background:var(--black-header);
-      color:var(--white);
-      border-bottom:1px solid var(--gray-border);
-      box-shadow:0 2px 8px rgba(0,0,0,0.2);
-    }
-
-    .header-inner{
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      padding:14px 16px;
-    }
-
-    .hamburger{
-      background:none;
-      border:none;
-      cursor:pointer;
-      color:white;
-    }
-    .hamburger svg{
-      width:24px;
-      height:24px;
-      stroke:white;
-      stroke-width:2.5;
-      fill:none;
-    }
-
-    .logo img{
-      height:36px;
-      display:block;
-      object-fit:contain;
-    }
-
-    .cta{
-      background:rgba(255,255,255,0.1);
-      color:white;
-      border:none;
-      border-radius:12px;
-      padding:10px 16px;
-      font-weight:600;
-      cursor:pointer;
-    }
-
-    nav{
-      display:flex;
-      gap:24px;
-      padding:12px 16px;
-      border-top:1px solid var(--gray-border);
-      font-weight:600;
-      font-size:15px;
-      background:var(--black-header);
+    body {
+      margin: 0;
+      font-family: "Inter", sans-serif;
+      background: #fafafa;
     }
 
     /* ==========================
-       القسم الثاني
+       ✅ الهيدر الثابت
+    ========================== */
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 100;
+      background: var(--black-header);
+      color: var(--white);
+      border-bottom: 1px solid var(--gray-border);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    }
+
+    .header-inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 14px 16px;
+    }
+
+    .hamburger {
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: white;
+    }
+
+    .hamburger svg {
+      width: 24px;
+      height: 24px;
+      stroke: white;
+      stroke-width: 2.5;
+      fill: none;
+    }
+
+    .logo img {
+      height: 36px;
+      display: block;
+      object-fit: contain;
+    }
+
+    .cta {
+      background: rgba(255,255,255,0.1);
+      color: white;
+      border: none;
+      border-radius: 12px;
+      padding: 10px 16px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+
+    .cta:hover {
+      background: rgba(255,255,255,0.25);
+    }
+
+    nav {
+      display: flex;
+      gap: 24px;
+      padding: 12px 16px;
+      border-top: 1px solid var(--gray-border);
+      font-weight: 600;
+      font-size: 15px;
+      background: var(--black-header);
+      justify-content: center;
+    }
+
+    /* ==========================
+       ✅ القسم الثاني
     ========================== */
     .hero-normal {
       width: 100%;
@@ -93,7 +108,7 @@
       text-align: center;
       color: #fff;
       font-family: 'Inter', sans-serif;
-      padding: 110px 20px 90px;
+      padding: 120px 20px 90px;
       box-sizing: border-box;
     }
 
@@ -194,9 +209,8 @@
 
     @media (max-width: 640px) {
       .hero-normal {
-        padding: 90px 20px 70px;
+        padding: 100px 20px 70px;
       }
-
       .hero-normal input,
       .hero-normal button {
         max-width: 90%;
@@ -204,7 +218,7 @@
     }
 
     /* ==========================
-       القسم الثالث
+       ✅ القسم الثالث
     ========================== */
     .hero-full {
       width: 100%;
@@ -259,7 +273,7 @@
     }
 
     /* ==========================
-       القسم الرابع (فوائد)
+       ✅ القسم الرابع (فوائد)
     ========================== */
     .features-section {
       background-color: #0e0e0e;
@@ -339,7 +353,7 @@
 </head>
 <body>
 
-  <!-- الهيدر -->
+  <!-- ✅ الهيدر -->
   <header>
     <div class="header-inner">
       <button class="hamburger" aria-label="menu">
@@ -353,7 +367,7 @@
     </nav>
   </header>
 
-  <!-- القسم الثاني -->
+  <!-- ✅ القسم الثاني -->
   <section class="hero-normal">
     <div class="content">
       <h1>Créateur de<br>site Web</h1>
@@ -369,7 +383,7 @@
     </div>
   </section>
 
-  <!-- القسم الثالث -->
+  <!-- ✅ القسم الثالث -->
   <section class="hero-full">
     <div class="hero-content">
       <span class="kicker">نَمَاذِجُ التَّصْمِيم</span>
@@ -381,7 +395,7 @@
     </div>
   </section>
 
-  <!-- القسم الرابع -->
+  <!-- ✅ القسم الرابع -->
   <section class="features-section" dir="rtl">
     <div class="container">
       <h5 class="section-subtitle">فوائد</h5>
