--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <!-- ✅ أيقونة الموقع -->
   <link rel="icon" href="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg">
 
-  <!-- ✅ لون المتصفح (الهاتف) -->
-  <meta name="theme-color" content="#0c0c0c" />
+  <!-- ✅ إعدادات اللون في المتصفحات (من الكود الأول) -->
+  <meta name="theme-color" content="#0c0c0c"> <!-- لأندرويد -->
+  <meta name="apple-mobile-web-app-capable" content="yes"> <!-- لتفعيل PWA في iPhone -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- نمط شريط الحالة في iPhone -->
+  <meta name="msapplication-navbutton-color" content="#0c0c0c"> <!-- لمايكروسوفت -->
 
   <!-- ✅ الخطوط -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Cairo:wght@400;600;700;800&family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
@@ -416,4 +419,4 @@
   </section>
 
 </body>
-</html>
+          </html>
