--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       <button class="cta">Connectez-vous</button>
     </div>
     <nav>
-      <span>Logos</span><span>Cartes de visite</span><span>Sites Web</span><span>AI</span>
+      <span>Logos</span><span>Cartes de visite</span><span>Sites Web</span><span>Ads</span>
     </nav>
   </header>
 
