--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <svg viewBox="0 0 24 24"><path d="M4 7h16M4 12h16M4 17h16" stroke-linecap="round"/></svg>
       </button>
       <a href="#" class="logo"><img src="https://i.postimg.cc/vHqVW38n/IMG-0846.jpg" alt="Logo"></a>
-      <button class="cta" onclick="window.location.href='Connectez-vous.html'">Connectez-vous</button>
+      <button class="cta" onclick="window.location.href='Connectez-vous/'">Connectez-vous</button>
     </div>
     <nav>
       <span>Logos</span><span>Cartes de visite</span><span>Sites Web</span><span>Ads</span>
